Background and images added

--- a/SpaceY.html
+++ b/SpaceY.html
@@ -19,23 +19,31 @@
   </div>
 
   <div class="header">
-    <h1>Header</h1>
+    <h1>SpaceY</h1>
   </div>
 
   <div class="topnav">
-    <a href="#">Link</a>
-    <a href="#">Link</a>
-    <a href="#">Link</a>
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Declarations/ Waivers</a>
   </div>
   
   <div class="flex-container-single">
-    <div>1</div>  
+    <div>
+      <img src="images/launchWithSmoke.png" width = 865px height = 400px alt="SpaceY Rocket Launch, February 2021">
+    </div>  
   </div>
   
   <div class="flex-container-triple">
-    <div>2</div>  
-    <div>3</div>
-    <div>4</div>
+    <div>
+      <img src="images/Moon.png" width = 275px height = 270px alt="Moon">
+    </div>  
+    <div>
+      <img src="images/marsWalk.png" width = 275px height = 270px alt="Mars">
+    </div>
+    <div>
+      <img src="images/modelRocket.png" width = 275px height = 270px alt="Model Rocket">
+    </div>
   </div>
   
   <div class="footer">
