--- a/SpaceY.html
+++ b/SpaceY.html
@@ -15,6 +15,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <link rel="icon" href="images/Earth.png" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
   <title>SpaceY</title>
 </head>
 
@@ -97,6 +99,10 @@
     </div>
   </div>
  
+
+  <!-- MAPQUEST HERE -->
+
+  <div id="map" style="width: 100%; height: 530px;"></div>
 
 </body>
  
